--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "@types/express": "^4.17.6",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.9.16"
   },
   "devDependencies": {
     "nodemon": "^2.0.4",
