--- a/package.json
+++ b/package.json
@@ -8,14 +8,20 @@
   "scripts": {
     "ts": "rm -rf ./build && tsc",
     "tsc": "rm -rf ./build && tsc -w",
-    "dev": "NODE_ENV=development PORT=3000 nodemon ./build/index.js"
+    "dev": "nodemon ./build/index.js"
   },
   "dependencies": {
-    "@types/express": "^4.17.6",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.9.16"
+    "mongoose": "^5.9.16",
+    "morgan": "^1.10.0",
+    "validator": "^13.0.0"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.6",
+    "@types/mongoose": "^5.7.21",
+    "@types/morgan": "^1.9.0",
     "nodemon": "^2.0.4",
     "typescript": "^3.9.3"
   }
