--- a/package.json
+++ b/package.json
@@ -11,17 +11,23 @@
     "dev": "nodemon ./build/index.js"
   },
   "dependencies": {
+    "cookie-session": "^1.4.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.9.16",
-    "morgan": "^1.10.0",
-    "validator": "^13.0.0"
+    "express-validator": "^6.5.0",
+    "helmet": "^3.22.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.16"
   },
   "devDependencies": {
+    "@types/cookie-session": "^2.0.40",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.6",
+    "@types/express-validator": "^3.0.0",
+    "@types/helmet": "^0.0.47",
     "@types/mongoose": "^5.7.21",
     "@types/morgan": "^1.9.0",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
     "typescript": "^3.9.3"
   }
