--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev": "nodemon ./build/index.js"
   },
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "cookie-session": "^1.4.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -20,11 +21,13 @@
     "mongoose": "^5.9.16"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/cookie-session": "^2.0.40",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.6",
     "@types/express-validator": "^3.0.0",
     "@types/helmet": "^0.0.47",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.7.21",
     "@types/morgan": "^1.9.0",
     "morgan": "^1.10.0",
