--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Node-REST-API-Typescripts",
+  "name": "noderestapitypescripts",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "git@github.com:JuniYadi/Node-REST-API-Typescripts.git",
