--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "nodemon ./build/index.js"
   },
   "dependencies": {
-    "bcrypt": "^5.0.0",
+    "bcryptjs": "^2.4.3",
     "cookie-session": "^1.4.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -22,7 +22,7 @@
     "ts-mongoose-pagination": "^1.1.2"
   },
   "devDependencies": {
-    "@types/bcrypt": "^3.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/cookie-session": "^2.0.40",
     "@types/express": "^4.17.6",
     "@types/helmet": "^0.0.47",
